# 8sem_Prak

./: CMakeLists.txt  Makefile  README.md  test.py  tmp.py
bluegene/: task.jcf
data/: mat.txt  mat1.txt  tmp.txt
include/: Matrix.h  Matrix.hpp
report/: make_report.py  report.odt
source/: main.cpp
